[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/fase1.gd" type="Script" id=1]
[ext_resource path="res://HandWriting.otf" type="DynamicFontData" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 64 )

[node name="fase1" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 130.0
margin_top = 71.0
margin_right = 889.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 1 )
text = "Qual o motivo do nome Godot?"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 45.0
margin_top = 75.0
margin_right = 107.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
text = "1)"
align = 1
autowrap = true

[node name="alternativa1" type="Button" parent="."]
margin_left = 135.0
margin_top = 154.0
margin_right = 813.0
margin_bottom = 216.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "é a junção de Go Do it"
icon_align = 1
expand_icon = true

[node name="alternativa4" type="Button" parent="."]
margin_left = 140.0
margin_top = 469.0
margin_right = 814.0
margin_bottom = 557.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "é o sobrenome do cara que inventou"
icon_align = 1
expand_icon = true

[node name="alternativa3" type="Button" parent="."]
margin_left = 138.0
margin_top = 361.0
margin_right = 814.0
margin_bottom = 443.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "é baseado em uma peça de teatro"
icon_align = 1
expand_icon = true

[node name="alternativa2" type="Button" parent="."]
margin_left = 139.0
margin_top = 253.0
margin_right = 812.0
margin_bottom = 333.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "sei lá mano"
icon_align = 1
expand_icon = true

[connection signal="pressed" from="alternativa1" to="." method="_on_alternativa1_pressed"]
[connection signal="pressed" from="alternativa4" to="." method="_on_alternativa4_pressed"]
[connection signal="pressed" from="alternativa3" to="." method="_on_alternativa3_pressed"]
[connection signal="pressed" from="alternativa2" to="." method="_on_alternativa2_pressed"]
